may fixed the UI not centered in BIG screen problem. haven't test due to no Bigger screen around me.

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -11,15 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+body{
+  background-color: lightgray;
+}
 
-/* .game {
-  text-align: center;
-} */
+.game {
+  width: 1000px;
+  height: 620px;
+  position: relative;
+  align-self: auto;
+  margin: 0 auto;
+}
 
 #board table {
   position: absolute;
-  left: 470px;
-  margin: 0 auto;
+  left: 229px;
+  border: 1px solid black;
+
 }
 #board tr {
   align-content: center;
@@ -31,7 +39,6 @@ code {
   margin:0;
   width: 32px;
   height: 31px;
-  /* align-self: center; */
   vertical-align: bottom;
   border-radius: 10%;
   background-color: darkgreen;
@@ -40,10 +47,12 @@ code {
 
 #leftBar {
   position: absolute;
-  left: 267px;
-  width: 200px;
-  height: 520px;
+  left: 0px;
+  width: 226px;
+  height: 516px;
   background-color: lightskyblue;
+  border: 1px solid black;
+
 }
 
 #gamesList {
@@ -56,10 +65,11 @@ code {
 
 #rightBar {
   position: absolute;
-  left: 1015px;
-  width: 200px;
-  height: 520px;
+  right: 0px;  
+  width: 226px;
+  height: 516px;
   background-color: lightskyblue;
+  border: 1px solid black;
 }
 
 #wordsPlayedNav {
@@ -85,13 +95,12 @@ code {
 #functionBar {
   text-align: center;
   position: absolute;
-  top: 610px;
-  left: 620px;
+  top: 520px;
+  left: 350px;
 }
 
 #functionBar table {
   margin: 0 auto;
-  background-color: white;
   border-spacing: 10px;
 }
 
@@ -101,6 +110,7 @@ code {
   text-align: center;
   border-radius: 10%;
   line-height: 0;
+  border: 1px solid black;
 }
 
 #functionBar button {
